# NewsKooo

./: .env.example  .gitattributes  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  images.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_finance.py
backend/newskoo/: __init__.py  harvest.py  smoke.py
backend/newskoo/analyze/: __init__.py  burst.py  embeddings.py  extractors.py  issues.py  issues_worker.py  ranking.py  schemas.py  trends.py  worker.py
backend/newskoo/api/: deps.py  main.py  metrics.py  schemas.py
backend/newskoo/api/routers/: __init__.py  articles.py  events.py  issues.py  reports.py  search.py  signals.py  sources.py  stream.py  trends.py
backend/newskoo/cluster/: __init__.py  dedup.py  events.py
backend/newskoo/core/: __init__.py  accel.py  config.py  contracts.py  db.py  kafka.py  logging.py  redis.py  topics.py
backend/newskoo/ingest/: __init__.py  api.py  html.py  politeness.py  producer.py  rss.py  scheduler.py  worker.py
backend/newskoo/llm/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py  registry.py  st_embed_provider.py
backend/newskoo/models/: __init__.py  analysis.py  article.py  base.py  crawl.py  event.py  finance.py  source.py  taxonomy.py  timeseries.py
backend/newskoo/parse/: __init__.py  extract.py  language.py  transform.py  worker.py
backend/newskoo/quality/: __init__.py  article_quality.py  bias.py  cli.py  source_score.py
backend/newskoo/reports/: __init__.py  export.py  generator.py  scheduler.py  schemas.py
backend/newskoo/resolve/: __init__.py  blocking.py  match.py  normalize.py  resolver.py  service.py
backend/newskoo/signals/: __init__.py  backtest.py  cli.py  generate.py  impact.py  securities.py
backend/newskoo/sources/: __init__.py  connectors.py  discovery.py  registry.py  schemas.py  seed_cli.py  seeds.py  validate.py
backend/newskoo/sources/extra/: __init__.py  africa_local.py  africa_me.py  anglo_local.py  asia.py  asia_local.py  europe.py  europe_local.py  finance_tech_niche.py  gov_ngo.py  india_regional.py  latam.py  latam_local.py  science.py  science_journals.py  tech_trade.py  us_local.py
backend/newskoo/storage/: __init__.py  persist.py  persist_worker.py  results.py  results_worker.py
backend/newskoo/workers/: __init__.py  run.py
backend/tests/: test_analyze_extractors.py  test_analyze_issues.py  test_api_endpoints.py  test_cluster_dedup.py  test_cluster_events.py  test_foundation.py  test_ingest_api.py  test_ingest_politeness.py  test_ingest_rss.py  test_llm_embed_st.py  test_llm_providers.py  test_native.py  test_parse_extract.py  test_parse_language.py  test_parse_transform.py  test_parse_worker.py  test_phase1_migration.py  test_phase1_topics.py  test_quality_article.py  test_quality_bias.py  test_quality_source.py  test_reports_generator.py  test_resolve_match.py  test_resolve_normalize.py  test_resolve_resolver.py  test_resolve_service.py  test_signals_backtest.py  test_signals_generate.py  test_signals_impact.py  test_signals_models.py  test_signals_securities.py  test_sources_discovery.py  test_sources_registry.py  test_sources_seeds.py  test_storage_persist.py  test_storage_results.py  test_trends_burst.py  test_trends_changepoints.py  test_trends_ranking.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  LIVE_INTEGRATION.md  OPERATIONS.md  ROADMAP.md  SOURCE_COVERAGE.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AppShell.tsx  ArticleList.tsx  EventCard.tsx  IssueFeed.tsx  Markdown.tsx  StatCard.tsx  TrendChart.tsx  states.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  sonner.tsx  table.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/hooks/: useApiMode.ts  useIssueStream.ts  useStatsStream.ts
frontend/src/lib/: api.ts  mocks.ts  query.ts  types.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Issues.tsx  Reports.tsx  Search.tsx  Signals.tsx  Sources.tsx  Trends.tsx
frontend/src/store/: ui.ts
infra/apptainer/: README.md  backend.def  frontend.def
infra/monitoring/: prometheus.yml
infra/scripts/: dev-bootstrap.sh  dev-services.sh  down.sh  live-integration.sh  prod-services.sh  up.sh  verify.sh
infra/sql/: init.sql
infra/systemd/: README.md  newskoo-api.service  newskoo-worker@.service
native/: CMakeLists.txt  README.md  pyproject.toml
native/src/: bindings.cpp
